index file modified

--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
     <div>
         first index html division
     </div>
+    <div>
+        index html second division added by other branch person
+    </div>
 </html>
